# chatGMT

./: .gitignore  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/chatgmt/: chatgmt.py  entry_point.py  settings.py
src/chatgmt/frontend/components/: components_id_tree.py
src/chatgmt/frontend/pages/: callbacks_chat_page.py  chat_page.py
src/chatgmt/services/: llm_service.py
tests/: conftest.py  test_callbacks.py  test_chatgmt.py
tests/services/: test_llm_service.py
