[project]
name = "chatgmt"
version = "0.1.0"
description = "chatGMT is a UI that allows users to access OpenAI models in a chatGPT like fashion while only paying per API call"
readme = "README.md"
authors = [
    { name = "Dr. Markus Musch", email = "markus-musch@web.de" }
]
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "dash-mantine-components>=0.15.1",
    "mypy>=1.14.1",
    "openai>=1.59.6",
    "pydantic-settings>=2.7.1",
]

[project.scripts]
dev-chatgmt = "chatgmt.entry_point:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
]
